[package]
name = "pinosh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
repository = "https://github.com/MrPicklePinosaur/pinosh"

[features]

[dependencies]
shrs = { version = "0.0.1" }

dirs = "5"
anyhow = "1"

log = "0.4"
env_logger = "0.10"
