[package]
name = "pinosh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
repository = "https://github.com/MrPicklePinosaur/pinosh"

[features]

[dependencies]
shrs = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_mux = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_command_timer = { git = "https://github.com/MrPicklePinosaur/shrs" }
shrs_cd_tools = { git = "https://github.com/MrPicklePinosaur/shrs" }

dirs = "5"
anyhow = "1"

log = "0.4"
env_logger = "0.10"
