[package]
name = "pinosh"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = ""
repository = "https://github.com/MrPicklePinosaur/pinosh"

[features]

[dependencies]
shrs = { version = "0.0.6" }
shrs_mux = { version = "0.0.6" }
shrs_command_timer = { version = "0.0.6" }
shrs_file_history = { version = "0.0.6" }
shrs_cd_tools = { version = "0.0.6" }
shrs_openai = { git = "https://github.com/MrPicklePinosaur/shrs_openai" }
shrs_z = { git = "https://github.com/MrPicklePinosaur/shrs_z" }

dirs = "5"
anyhow = "1"
cmd_lib = "1.9"

log = "0.4"
env_logger = "0.10"
